# eye

./: .gitignore  Cargo.toml  README.md  bun.lockb  components.json  crate_graph.json  justfile  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
client/: index.html
client/src/: App.tsx
src/: main.rs
