[package]
name = "eye"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.2", features = ["json"] }
axum-extra = { version = "0.9.0", features = ["cookie", "typed-header"] }
clap = { version = "4.3", features = ["derive"] }
quote = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
syn = { version = "1.0", features = ["full", "extra-traits"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["tracing", "limit", "buffer"] }
tower-http = { version = "0.5.0", features = ["cors", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
walkdir = "2.3"
